# Pitt-PINN-Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: DONOTUSE.csv  Ethyl Acetate+PDMS.xlsx  Hexane+PDMS-new.xlsx  PDMS with Toluene 2.xlsx  README.md  agg.data.xlsx  placeholder_film_data.csv  synthetic_data.csv  synthetic_data_improved.csv
results/baselines/: metadata.json  metrics.json
src/baseline_models/: __init__.py
src/baseline_models/bpnn/: model.py
src/baseline_models/linear regression/: model.py
src/baseline_models/rfr/: model.py
src/pitt_pinn/: __init__.py  config.py  data.py  evaluate.py  models.py  physics.py  train_baselines.py  train_pinn.py
tests/: test_baseline_models.py  test_data.py  test_physics.py
