[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pitt-pinn-project"
version = "0.1.0"
description = "Inverse modeling for interfacial thin-film formation with PINNs"
requires-python = ">=3.10"

[project.scripts]
train-baselines = "pitt_pinn.train_baselines:main"
train-pinn = "pitt_pinn.train_pinn:main"
evaluate-pinn = "pitt_pinn.evaluate:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
